<resources>
    <string name="app_name">GuessTheCelebrity</string>
    <string name="marvel_quiz">MARVEL QUIZ</string>
    <string name="name_hint">Enter Your Name Here</string>
    <string name="quiz_desc">This QUIZ comprises of 10 question. Each question would be having a picture of actor/actress. Based on the picture and question asked, you have to choose from the four given options and press on NEXT button to proceed. \n\nNote : INTERNET CONNECTION REQUIRED.</string>
    <string name="tap_to_start_quiz">TAP TO START QUIZ</string>
    <string name="to_all_marvel_fans_by_sayantan_banerjee">To All Marvel Fans By Sayantan Banerjee</string>
    <string name="winner">ANURAG \nscored\n7 correct out of 10.</string>
    <string name="todo">TODO</string>
    <string name="go_to_home_screen">GO TO HOME SCREEN</string>
    <string name="guess_the">GUESS THE</string>
    <string name="marvel_character">MARVEL CHARACTER</string>
    <string name="todo">TODO</string>
    <string name="next">NEXT</string>
    <string name="which_character_this_actor_actress_play">Which character this actor/actress play?</string>
    <string name="radiobutton_one">RadioButton one</string>
    <string name="radiobutton_three">RadioButton three</string>
    <string name="radiobutton_two">RadioButton two</string>
    <string name="todo">TODO</string>
    <string name="radiobutton_four">RadioButton four</string>
</resources>
