<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backg"
        android:alpha="0.9">


    <TextView
            android:text="@string/marvel_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#045FEC"
            android:textStyle="bold"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.05" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="25sp"
            android:hint="@string/name_hint"
            android:textColorHint="#FFFFFF"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:id="@+id/editText"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.15"
            android:importantForAutofill="no"
            android:hintTextColor="#8D6E63"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
            android:text="@string/quiz_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#004A92"
            android:textSize="25sp"
            android:id="@+id/textView3"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5" />

    <Button
            android:text="@string/tap_to_start_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#FF0000"
            android:layout_gravity="center"
            android:onClick="button"
            android:background="#FFFFFF"
            android:id="@+id/button2"
            android:layout_marginTop="30dp"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.9"/>

    <TextView
            android:text="@string/to_all_marvel_fans_by_sayantan_banerjee"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#310303"
            android:textSize="16sp"
            android:paddingBottom="6dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView5"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="1"/>


</android.support.constraint.ConstraintLayout>